--- a/2022I_GBI6G01_ExamenPython.ipynb
+++ b/2022I_GBI6G01_ExamenPython.ipynb
@@ -95,10 +95,23 @@
     "    texto_1 = file.read()\n",
     "accession = texto_1.split(\"\\n\")\n",
     "Entrez.email=\"romel.alvarado@gmail.com\"\n",
-    "archivo = open(\"Data/sequence.txt\", \"w\")\n",
+    "archivo = open(\"data/sequence.txt\", \"w\")\n",
     "for i in accession[0:10]: \n",
     "    handle=Entrez.efetch(db=\"nuccore\", id=i, rettype=\"fasta\")\n",
     "    archivo.write(handle.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clustalw_exe = r\"C:\\Program Files (x86)\\ClustalW2\\clustalw2.exe\"\n",
+    "clustalw_cline = ClustalwCommandline(clustalw_exe, infile = \"data/sequence.txt\")\n",
+    "assert os.path.isfile(clustalw_exe), \"Clustal_W executable is missing or not found\"\n",
+    "stdout, stderr = clustalw_cline()\n",
+    "ali = open(\"Data/alineamiento.txt\", \"w\")"
    ]
   },
   {
@@ -111,39 +124,17 @@
     "from Bio import AlignIO\n",
     "from Bio import Phylo\n",
     "from Bio.Align.Applications import ClustalwCommandline\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\Bio\\File.py:72\u001b[0m, in \u001b[0;36mas_handle\u001b[1;34m(handleish, mode, **kwargs)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 72\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(handleish, mode, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[0;32m     73\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m fp\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not TextIOWrapper",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [36]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData/alineamiento.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m AG: \n\u001b[1;32m----> 2\u001b[0m     alignment \u001b[38;5;241m=\u001b[39m \u001b[43mAlignIO\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclustal\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     calculator \u001b[38;5;241m=\u001b[39m DistanceCalculator(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124midentity\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m distance_matriz \u001b[38;5;241m=\u001b[39m calculator\u001b[38;5;241m.\u001b[39mget_distance(alignment)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\Bio\\AlignIO\\__init__.py:386\u001b[0m, in \u001b[0;36mread\u001b[1;34m(handle, format, seq_count)\u001b[0m\n\u001b[0;32m    384\u001b[0m iterator \u001b[38;5;241m=\u001b[39m parse(handle, \u001b[38;5;28mformat\u001b[39m, seq_count)\n\u001b[0;32m    385\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 386\u001b[0m     alignment \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43miterator\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    387\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[0;32m    388\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo records found in handle\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\Bio\\AlignIO\\__init__.py:337\u001b[0m, in \u001b[0;36mparse\u001b[1;34m(handle, format, seq_count)\u001b[0m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    335\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown format \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mformat\u001b[39m)\n\u001b[1;32m--> 337\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m i\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\Bio\\AlignIO\\ClustalIO.py:267\u001b[0m, in \u001b[0;36mClustalIterator.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    265\u001b[0m \u001b[38;5;66;03m# There should now be a consensus line\u001b[39;00m\n\u001b[0;32m    266\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m consensus:\n\u001b[1;32m--> 267\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mline\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    268\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m seq_cols \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    269\u001b[0m     consensus \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m line[seq_cols]\n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "with open(\"Data/alineamiento.txt\", \"r\") as AG: \n",
-    "    alignment = AlignIO.read(AG, \"clustal\")\n",
-    "    calculator = DistanceCalculator(\"identity\")\n",
+    "alignment = AlignIO.read(\"data/alineamiento.txt\", \"clustal\")\n",
+    "calculator = DistanceCalculator(\"identity\")\n",
     "distance_matriz = calculator.get_distance(alignment)\n",
     "constructor = DistanceTreeConstructor(calculator)\n",
     "tree = constructor.build_tree(alignment)\n",
